# 02516---Deep-learning-in-Computer-Vision

./: .gitignore  README.md  main.py  pyproject.toml
Learning notes/: learning_notes.ipynb
Project_1/: IDLCV_Project_1_hotdog (1).ipynb  Notes.md
